--- a/assets/dawki.css
+++ b/assets/dawki.css
@@ -1,19 +1,3 @@
-.header-bar-panel{
-  min-height: 20px;
-  padding: 0;
-}
-
-.header-bar-panel .dawki-title{
-  color: #C5C5C5;
-  font-size: 23px;
-  font-family: 'JetBrains Mono';
-  padding-top: 5px;
-  padding-left: 30px;
-  min-width: 215px;
-  background: rgb(30, 30, 31);
-
-}
-
 .close-btn {
   border-radius: 50%;
   border: 0;
@@ -21,20 +5,8 @@
   min-height: 10px;
   margin-top: 15px;
   margin-bottom: 15px;
-  margin-left:15px;
-  background: rgb(167, 0, 35);
-}
-
-.maximize-btn {
-  border-radius: 50%;
-  border: 0;
-  min-width: 10px;
-  min-height: 10px;
-  margin-top: 15px;
-  margin-left:5px;
-  margin-bottom: 15px;
-  background: rgb(6, 152, 50);
-}
+  margin-left: 15px;
+  background: #a70023; }
 
 .minimize-btn {
   border-radius: 50%;
@@ -43,15 +15,39 @@
   min-height: 10px;
   margin-top: 15px;
   margin-bottom: 15px;
-  margin-left:5px;
-  background: rgb(196, 185, 31);
-}
+  margin-left: 5px;
+  background: #c4b91f; }
 
-.navigation-panel{
-  background: rgb(30, 30, 31);
+.maximize-btn {
+  border-radius: 50%;
+  border: 0;
+  min-width: 10px;
+  min-height: 10px;
+  margin-top: 15px;
+  margin-left: 5px;
+  margin-bottom: 15px;
+  background: #069832; }
+
+.header-bar-panel {
+  min-height: 20px;
+  padding: 0; }
+
+.header-bar-panel .dawki-title {
+  color: #C5C5C5;
+  font-size: 23px;
+  font-family: 'JetBrains Mono';
+  padding-top: 5px;
+  padding-left: 30px;
+  min-width: 215px;
+  background: #1e1e1f; }
+
+.navigation-panel {
   min-width: 300px;
-}
+  padding: 0;
+  background: #1e1e1f; }
 
-.app-window-action-panel{
-  background: rgb(30, 30, 31);
-}
+.app-window-action-bar-panel {
+  background: #1e1e1f; }
+
+window {
+  filter: blur(5px); }
