adds styling for content panel

--- a/src/container_widget/container_widget.scss
+++ b/src/container_widget/container_widget.scss
@@ -1,3 +1,4 @@
 @import './style/header_bar.panel.scss';
 @import './style/navigation.panel.scss';
 @import './style/app_window_action_bar.panel.scss';
+@import './style/app_content_panel.scss';
