--- a/assets/dawki.css
+++ b/assets/dawki.css
@@ -30,7 +30,8 @@ dawki-max-btn {
 
 dawki-header-bar {
   min-height: 20px;
-  padding: 0; }
+  padding: 0;
+  background: #1e1e1f; }
   dawki-header-bar .dawki-title {
     color: #C5C5C5;
     font-size: 18px;
@@ -46,6 +47,9 @@ dawki-navigation {
   background: #1e1e1f; }
 
 dawki-window-action-bar {
+  background: #1e1e1f; }
+
+dawki-content {
   background: #1e1e1f; }
 
 window {
