--- a/src/container_widget/style/header_bar.panel.scss
+++ b/src/container_widget/style/header_bar.panel.scss
@@ -12,8 +12,8 @@ dawki-header-bar{
   }
 
   .dawki-window-drag-handle{
-    color: rgb(55,255,255);
-     background-color: #6199ff;
+    margin-top:5px;
+    margin-left:20px;
   }
 
 }
