--- a/src/widget/button/style/close.scss
+++ b/src/widget/button/style/close.scss
@@ -1,12 +1,15 @@
-
-
 dawki-close-btn {
-  border-radius: 50%;
-  border: 0;
-  min-width: 10px;
-  min-height: 10px;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  margin-left:15px;
-  background: rgb(167, 0, 35);
+  background-position: center;
+ cursor: pointer;
+  margin: 0;
+  margin-right: 4px;
+  min-width: 15px;
+  background-size: 15px;
+  background-image: url("/assets/icons/circle.svg");
+  filter:invert(17%) sepia(75%) saturate(2905%) hue-rotate(331deg) brightness(83%) contrast(102%); 
+  background-repeat: no-repeat;
+}
+
+dawki-close-btn:hover {
+  background-image: url("/assets/icons/window_close.svg");
 }
