--- a/src/widget/button/style/minimize.scss
+++ b/src/widget/button/style/minimize.scss
@@ -1,12 +1,15 @@
-
 dawki-min-btn {
-  border-radius: 50%;
-  border: 0;
-  min-width: 10px;
-  min-height: 10px;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  margin-left:5px;
-  background: rgb(196, 105, 31);
+  background-position: center;
+  cursor: pointer;
+  margin: 0;
+  margin-right: 4px;
+  min-width: 15px;
+  background-size: 15px;
+  background-image: url("/assets/icons/circle.svg");
+  filter: invert(80%) sepia(18%) saturate(6735%) hue-rotate(4deg) brightness(94%) contrast(91%);
+  background-repeat: no-repeat;
 }
 
+dawki-min-btn:hover {
+  background-image: url("/assets/icons/window_minimize.svg");
+}
