--- a/src/widget/button/button.scss
+++ b/src/widget/button/button.scss
@@ -1,3 +1,4 @@
+@import './style/window_action_btn.scss';
 @import './style/close.scss';
 @import './style/minimize.scss';
 @import './style/maximize.scss';
