--- a/assets/dawki.css
+++ b/assets/dawki.css
@@ -1,9 +1,9 @@
 .window-action-btn, dawki-max-btn, dawki-min-btn, dawki-close-btn {
   background-position: center;
   margin: 0;
-  margin-right: 4px;
-  min-width: 15px;
-  background-size: 15px;
+  margin-right: 7px;
+  min-width: 13px;
+  background-size: 13px;
   background-repeat: no-repeat; }
 
 dawki-close-btn {
@@ -27,38 +27,35 @@ dawki-max-btn {
 dawki-max-btn:hover {
   background-image: url("/assets/icons/window_maximize.svg"); }
 
-dawki-header-bar {
-  padding: 0; }
-  dawki-header-bar .dawki-title {
-    color: #C5C5C5;
-    font-size: 18px;
-    font-family: 'JetBrains Mono';
-    margin-top: 5px;
-    margin-left: 30px; }
-  dawki-header-bar .dawki-window-drag-handle {
-    margin-top: 5px;
-    margin-left: 20px;
-    background-position: center;
-    background-image: url("/assets/icons/drag.svg"); }
-
 dawki-navigation {
   min-width: 300px;
-  padding: 40px 10px; }
+  padding: 2px 10px 2px 5px;
+  background: #1e1d1d;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px; }
 
 .nav-item, .docker-images-nav-label, .docker-containers-nav-label {
   font-size: 18px;
   font-family: 'JetBrains Mono';
   min-width: 130px;
-  text-justify: end;
   padding: 5px 10px 5px 20px; }
   .nav-item:hover, .docker-images-nav-label:hover, .docker-containers-nav-label:hover {
     background: #032058; }
 
+dawki-content {
+  background: #1B1B1B;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px; }
+
 dawki-window-action-bar {
   min-height: 10px;
-  margin-left: 10px; }
+  margin-left: 20px;
+  margin-top: 15px; }
 
 window {
+  background: none; }
+
+.root {
   background: #1e2225;
   border-radius: 8px; }
 
