--- a/src/box_widget/style/app_navigation_box.scss
+++ b/src/box_widget/style/app_navigation_box.scss
@@ -1,14 +1,16 @@
 dawki-navigation {
   min-width: 300px;
-  padding: 40px 10px;
+  padding: 2px 10px 2px 5px;
+  background: rgb(30, 29, 29);
 
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
 }
 
   .nav-item {
     font-size: 18px;
     font-family: 'JetBrains Mono';
     min-width: 130px;
-    text-justify: end;
     padding: 5px 10px 5px 20px;
     &:hover {
       background: rgb(3, 32, 88);
