--- a/assets/dawki.css
+++ b/assets/dawki.css
@@ -28,17 +28,18 @@ dawki-max-btn:hover {
   background-image: url("/assets/icons/window_maximize.svg"); }
 
 dawki-navigation {
-  min-width: 300px;
-  padding: 2px 10px 2px 5px;
+  min-width: 18rem;
+  padding: 0.2rem 1rem 0.2rem 0.3rem;
   background: #1e1d1d;
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px; }
 
 .nav-item, .docker-images-nav-label, .docker-containers-nav-label {
-  font-size: 18px;
-  font-family: 'JetBrains Mono';
-  min-width: 130px;
-  padding: 5px 10px 5px 20px; }
+  font-size: 1.9rem;
+  font-family: 'Overpass';
+  font-weight: 50;
+  min-width: 1.3rem;
+  padding: 0.5rem 1rem 0.5rem 2rem; }
   .nav-item:hover, .docker-images-nav-label:hover, .docker-containers-nav-label:hover {
     background: #032058; }
 
