--- a/src/widget/button/style/window_action_btn.scss
+++ b/src/widget/button/style/window_action_btn.scss
@@ -2,7 +2,7 @@
   background-position: center;
   margin: 0;
   margin-right: 7px;
-  min-width: 13px;
-  background-size: 13px;
+  min-width: 3em;
+  background-size: 3em;
   background-repeat: no-repeat;
 }
