--- a/src/widget/button/style/close.scss
+++ b/src/widget/button/style/close.scss
@@ -1,7 +1,7 @@
-dawki-close-btn {
+.dawki-close-btn {
   @extend .window-action-btn;
   background-image: url("/assets/icons/common/window_close.svg");
 }
 
-dawki-close-btn:hover {
+.dawki-close-btn:hover {
 }
