--- a/src/widget/button/style/maximize.scss
+++ b/src/widget/button/style/maximize.scss
@@ -1,7 +1,7 @@
-dawki-max-btn {
+.dawki-max-btn {
   @extend .window-action-btn;
   background-image: url("/assets/icons/common/window_maximize.svg");
 }
 
-dawki-max-btn:hover {
+.dawki-max-btn:hover {
 }
