--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,5 +1,4 @@
-@import "./widget/widget.scss";
-@import "./box_widget/box_widget.scss";
+@import './box/box.scss';
 
 * {
   all: unset;
@@ -9,7 +8,4 @@ window {
   background: none;
   font-size: 10px;
 }
-.root {
-  background: rgb(30, 34, 37);
-  border-radius: 8px;
-}
+
