--- a/assets/dawki.css
+++ b/assets/dawki.css
@@ -1,11 +1,24 @@
+.main-window {
+  min-width: 800px;
+  min-height: 500px; }
+
 .navigation-box {
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
-  min-width: 300px; }
+  min-width: calc(800px * 1/3); }
 
 .content-box {
   border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px; }
+  border-bottom-right-radius: 8px;
+  min-width: calc(800px * 2/3); }
+
+.navigation-header {
+  border-top-left-radius: 8px;
+  min-height: 50px; }
+
+.content-header {
+  border-top-right-radius: 8px;
+  min-height: 50px; }
 
 .main-window-dark {
   background: none; }
@@ -14,14 +27,10 @@
   background: none; }
 
 .navigation-box-dark {
-  background: #1B1B1B;
-  border-top-left-radius: 8px;
-  border-bottom-left-radius: 8px; }
+  background: #1B1B1B; }
 
 .content-box-dark {
-  background: #1A1A1A;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px; }
+  background: #1A1A1A; }
 
 * {
   all: unset; }
