--- a/src/css/box.scss
+++ b/src/css/box.scss
@@ -1,12 +1,34 @@
 @import './variables.scss';
 
+$base-font-size: 10px;
+$window-min-height: 500px;
+$window-min-width: 800px;
+$border-radius: 8px;
+$draggable-header-height: 50px;
+
+.#{$main-window} {
+  min-width: $window-min-width;
+  min-height: $window-min-height;
+}
+
+.#{$navigation-header} {
+  border-top-left-radius: $border-radius;
+  min-height: $draggable-header-height;
+}
+
+.#{$content-header} {
+  border-top-right-radius: $border-radius;
+  min-height: $draggable-header-height;
+}
+
 .#{$navigation-box} {
-  border-top-left-radius: 8px;
-  border-bottom-left-radius: 8px;
-  min-width: 300px;
+  border-top-left-radius: $border-radius;
+  border-bottom-left-radius: $border-radius;
+  min-width: calc(#{$window-min-width} * 1/3);
 }
 
 .#{$content-box} {
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
+  border-top-right-radius: $border-radius;
+  border-bottom-right-radius: $border-radius;
+  min-width: calc(#{$window-min-width} * 2/3);
 }
