--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -5,4 +5,7 @@ $navigation-header: 'navigation-header';
 $navigation-items: 'navigation-items';
 $content-box: 'content-box';
 $content-header: 'content-header';
-
+$win-actions: 'window-actions';
+$win-close-btn: 'win-close-btn';
+$win-min-btn: 'win-min-btn';
+$win-max-btn: 'win-max-btn';
