--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,3 +1,8 @@
+* {
+  all: unset;
+}
 
 @import './box.scss';
+@import './button.scss';
+@import './icons/default.scss';
 @import './themes/dark.scss';
